Fix img distortion in features page https://github.com/lmcrean/Hoverboard/issues/59

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -910,6 +910,7 @@ padding: 0.8em;
   .img-text-wrapper img, .img-text-wrapper-reverse img {
   width: 35%;
   height: auto;
+  object-fit: contain;
 }
 
   .img-text-wrapper p, .img-text-wrapper-reverse p{
@@ -922,7 +923,16 @@ padding: 0.8em;
 @media screen and (min-width: 1728px) {
   .img-text-wrapper, .img-text-wrapper-reverse {
     padding-inline: 54px;
-    margin-inline: 20%;
+    margin-inline: 10%;
+    width: 1400px;
+    margin: auto;
+  }
+
+  .img-text-wrapper img, .img-text-wrapper-reverse img {
+    width: 500px;
+    height: 500px;
+    margin: auto;
+    object-fit: contain;
   }
 
   .img-text-wrapper p, .img-text-wrapper-reverse p{
